--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap-scss",
               "src/styles.scss"
             ],
             "scripts": [],
